--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <td onclick="appendOperation(2)">2</td>
             <td onclick="appendOperation(3)">3</td>
             <td onclick="appendOperation('+')" class="highlight norm">+</td>
-            <td onclick="appendOperation('**')" class="highlight extra">^</td>
+            <td onclick="appendOperation('ˆ')" class="highlight extra">^</td>
         </tr>
 
 
